themes/rework/misc.css
@font-face {
    font-family: CodexThin;
    src: url("../../fonts/Mali/Mali-ExtraLight.ttf");
    font-weight: normal;
}

@font-face {
    font-family: CodexLight;
    src: url("../../fonts/Mali/Mali-Light.ttf");
    font-weight: normal;
}

@font-face {
    font-family: Codex;
    src: url("../../fonts/Mali/Mali-Regular.ttf");
    font-weight: normal;
}

@font-face {
    font-family: CodexMedium;
    src: url("../../fonts/Mali/Mali-Medium.ttf");
    font-weight: normal;
}

@font-face {
    font-family: CodexBold;
    src: url("../../fonts/Mali/Mali-SemiBold.ttf");
    font-weight: normal;
}

@font-face {
    font-family: CodexBolder;
    src: url("../../fonts/Mali/Mali-Bold.ttf");
    font-weight: normal;
}

@font-face {
    font-family: Charmonman;
    src: url("../../fonts/Charmonman-Bold.ttf");
    font-weight: normal;
}

#goForward,
#goBackward {
    transition: 0.15s;
    padding: 4px;
    padding-left: 15px;
    padding-right: 15px;
    color: white;
    background: rgb(31, 31, 31);
    border-radius: 6px;
    box-shadow: inset 0 0 6px 6px rgb(19, 19, 19);
    text-shadow: 0 0 0px black;
    font-size: 32px;
    width: fit-content;
    height: fit-content;
    position: absolute;
    top: -27px;
    pointer-events: all;
    z-index: 2;
}

#goForward:hover,
#goBackward:hover {
    background: rgb(59, 59, 59);
    box-shadow: inset 0 0 6px 6px rgb(44, 44, 44);
    text-shadow: -2px 3px 5px black;
}

#goForward {
    right: 726px;
}

#goBackward {
    left: 5px;
}

#charbeingequipped {
    font-size: 20px;
    font-family: CodexMedium;
    color: white;
    background: rgb(73, 2, 2);
    position: absolute;
    left: 156px;
    top: -15px;
    padding-left: 5px;
    padding-right: 5px;
}

/* OPTIONS MENU */
#optionsScreen {
    width: 450px;
    height: 500px;
    background-color: rgb(94, 4, 4);
    position: absolute;
    left: 50%;
    top: 50%;
    margin-top: -250px;
    margin-left: -225px;
    border-radius: 4px;
    border: 8px solid rgb(20, 13, 1);
    box-shadow: 0 8px 6px 8px rgb(39, 12, 1), inset 0 0 8px 8px rgb(80, 31, 3);
    z-index: 3;
    background-image: url("../../resources/images/themes/rework/bg/bg_red.png");
}

#qlContainer {
    width: 90%;
    height: 60px;
    position: relative;
    left: 10px;
    top: 10px;
}

#combatSpeed,
#combatDelay {
    position: absolute;
    left: 10px;
    width: 120px;
    height: 30px;
    border: none;
    background-color: rgb(70, 70, 70);
    box-shadow: inset 0 0 4px 4px rgb(82, 82, 82);
    border-radius: 8px;
    color: white;
    text-align: center;
    font-family: Codex;
    font-size: 20px;
}

#combatSpeedText,
#combatDelayText {
    position: absolute;
    left: 140px;
}

#combatSpeed {
    top: 60px;
}

#combatDelay {
    top: 120px;
}

#combatSpeedText {
    top: 25px;
}

#combatDelayText {
    top: 85px;
}

.optionsCheck {
    display: block;
    width: 35px;
    height: 35px;
    background-color: rgb(87, 15, 15);
    border: 2px solid darkred;
    position: absolute;
    left: 5px;
    top: 5px;
    text-align: center;
}

.optionsCheck p {
    transition: 0.2s;
    text-align: center;
    color: white;
    font-family: Codex;
    font-size: 32px;
}

#qlCheck {
    transform: scale(0);
    position: absolute;
    left: 7px;
    bottom: -35px;
}

.optionsText {
    font-size: 32px;
    font-family: Codex;
    position: absolute;
    top: -25px;
    left: 60px;
    color: white;
    text-shadow: 0 0 4px black;
}

#optionsBack {
    transition: 0.15s;
    width: 105px;
    height: 50px;
    border: none;
    box-shadow: 0 12px 4px 4px rgb(70, 8, 20);
    background-color: rgb(92, 1, 19);
    user-select: none;
    outline: none;
    font-size: 44px;
    font-family: CodexLight;
    color: white;
    text-shadow: 0 4px 6px black;
    margin: 20px;
    position: relative;
    top: 325px;
    cursor: pointer;
}

#optionsBack:hover {
    top: 333px;
    box-shadow: 0 4px 4px 4px rgb(70, 8, 20);
}

#optionsBack:active {
    top: 335px;
    box-shadow: 0 2px 4px 4px rgb(70, 8, 20);
}

/* COMBAT */

#combatButtonsContainer {
    width: 750px;
    height: 350px;
    position: absolute;
    left: 50%;
    margin-left: -375px;
    bottom: 140px;
}

#ability_wheel {
    position: absolute;
    left: -75px;
    bottom: 10px;
    width: fit-content;
    height: fit-content;
}

#combatAbility1 img,
#combatAbility2 img,
#combatAbility3 img,
#combatAbility4 img,
#combatSpell1 img,
#combatSpell2 img,
#combatSpell3 img,
#combatSpell4 img {
    position: absolute;
    text-align: center;
    align-self: center;
    justify-self: center;
}

#combatAbility1,
#combatAbility2,
#combatAbility3,
#combatAbility4,
#combatSpell1,
#combatSpell2,
#combatSpell3,
#combatSpell4 {
    height: 96px;
    width: 96px;
}

.combatAbiImage {
    top: 12px;
    width: 65px;
    height: 65px;
    left: 16px;
}

#combatAbility1 {
    position: absolute;
    left: -100px;
    top: 110px;
}

#combatAbility2 {
    position: absolute;
    left: 100px;
    top: 110px;
}

#combatAbility3 {
    position: absolute;
    left: 0px;
    top: 220px;
}

#combatAbility4 {
    position: absolute;
    left: 0px;
    top: 0px;
}

#combatSpell1 {
    position: absolute;
    left: 550px;
    top: 110px;
}

#combatSpell2 {
    position: absolute;
    left: 750px;
    top: 110px;
}

#combatSpell3 {
    position: absolute;
    left: 650px;
    top: 220px;
}

#combatSpell4 {
    position: absolute;
    left: 650px;
    top: 0px;
}

#combatUltimate {
    position: absolute;
    left: 50%;
    margin-left: -64px;
}

#combatAttack,
#combatDefense {
    position: absolute;
    top: 220px;
}

#combatAttack {
    left: 175px;
}

#combatDefense {
    right: 175px;
}

#combatButtonsContainer div {
    transition: 0.1s;
    transform: scale(1);
    cursor: pointer;
}

#abilityInfo {
    display: block;
    transition: 0.1s;
    background-color: rgba(0, 0, 0, 0.45);
    width: 200px;
    height: fit-content;
    position: absolute;
    text-align: center;
    border-radius: 20px;
    z-index: 3;
}

#abilityInfo p {
    margin: 5px;
    opacity: 1.5;
}

#abilityInfo span {
    font-size: 15px;
}

#combatTextContainer {
    width: 800px;
    height: 42vh;
    background-image: url("../../resources/images/themes/rework/bg/bg_gray.png");
    position: absolute;
    top: 10px;
    left: 50%;
    margin-left: -400px;
    border: 4px solid rgb(39, 39, 39);
    box-shadow: 0px 4px 6px 6px rgb(26, 26, 26);
    border-radius: 12px;
    overflow: auto;
}

#combatTextContainer p {
    margin: 5px;
    margin-left: 20px;
    padding: 5px;
    border: 2px solid rgb(48, 48, 48);
}

#targetingCombat {
    width: 400px;
    height: 250px;
    background-color: rgba(0, 0, 0, 0.45);
    position: absolute;
    left: 50%;
    top: 50%;
    margin-left: -200px;
    margin-top: -125px;
    z-index: 4;
    overflow: auto;
    display: none;
    grid-template-columns: 1fr 1fr 1fr;
}

#targetingCombat img {
    transition: 0.1s;
    width: 90px;
    height: 90px;
    border-radius: 100%;
    position: relative;
    border: 3px solid gold;
    box-shadow: 0 0 1px 1px gold;
    margin: 10px;
}

#targetingCombat img:hover {
    box-shadow: 0 0 5px 5px rgb(170, 145, 1);
}

#roundHistory {
    width: 200px;
    height: 35px;
    position: absolute;
    left: 50%;
    margin-left: -100px;
    top: 44vh;
    border-radius: 6px;
    z-index: -1;
    display: flex;
}

#toggleRound,
#toggleHistory {
    transition: 0.1s;
    position: relative;
    height: 90%;
    width: 50%;
    color: white;
    border: 4px solid black;
    box-sizing: border-box;
    top: 10%;
    background-image: url("../../resources/images/themes/rework/bg/bg_gray.png");
    font-family: Codex;
    font-size: 17px;
    text-align: center;
    cursor: pointer;
}

.roundHistorySelected {
    border: 4px solid white !important;
}

.cooldowntext {
    position: absolute;
    left: 50%;
    top: -30px;
    transform: translateX(-50%);
    font-size: 50px;
    color: rgb(243, 161, 161);
    text-shadow: 0 0 8px rgb(228, 123, 123);
    z-index: 2;
    filter: brightness(150%) !important;
    text-align: center;
}

#statusInfo {
    transition: 0.15s;
    position: absolute;
    left: 50px;
    top: 50px;
    background: rgba(0, 0, 0, 0.45);
    width: fit-content;
    height: fit-content;
    max-width: 160px;
    color: white;
    font-family: Codex;
    z-index: 5;
    margin: 0px;
}

#statusInfo span {
    font-size: 13px;
    align-self: center;
}

